--- a/app/src/main/res/layout/activity_moderator_user_details.xml
+++ b/app/src/main/res/layout/activity_moderator_user_details.xml
@@ -176,7 +176,7 @@
         app:layout_constraintVertical_bias="0.077">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_courses_user"
+            android:id="@+id/rv_courses_user_purchased"
             android:layout_width="wrap_content"
             android:layout_height="300dp"
             android:layout_gravity="center_horizontal"
