--- a/app/src/main/res/layout/fragment_moderator_courses.xml
+++ b/app/src/main/res/layout/fragment_moderator_courses.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.ModeratorCoursesFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <Button
+        android:id="@+id/btn_moderator_sign_out"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sign out"/>
 
 </FrameLayout>
