--- a/app/src/main/res/layout/activity_moderator_user_details.xml
+++ b/app/src/main/res/layout/activity_moderator_user_details.xml
@@ -53,6 +53,7 @@
         android:text="email@email.com"
         android:textColor="@color/white"
         android:textSize="20dp"
+        android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.064"
@@ -167,16 +168,16 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_width="190dp"
+        android:layout_height="200dp"
         android:background="@drawable/top_shadow_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_posted_courses"
-        app:layout_constraintVertical_bias="0.077">
+        app:layout_constraintVertical_bias="0.05">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_courses_user_purchased"
+            android:id="@+id/rv_courses_user_published"
             android:layout_width="wrap_content"
             android:layout_height="300dp"
             android:layout_gravity="center_horizontal"
@@ -202,13 +203,13 @@
 
     <ScrollView
         android:id="@+id/scrollView3"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_width="190dp"
+        android:layout_height="200dp"
         android:background="@drawable/top_shadow_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_bookmarked_courses_moderator"
-        app:layout_constraintVertical_bias="0.077">
+        app:layout_constraintVertical_bias="0.05">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_courses_user_bookmarked"
