--- a/app/src/main/res/layout/activity_moderator_user_details.xml
+++ b/app/src/main/res/layout/activity_moderator_user_details.xml
@@ -110,13 +110,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:text="Ratings posted: 0"
+        android:text="Ratings given: 0 avg(0)"
         android:textColor="@color/white"
         android:textSize="15dp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.667"
+        app:layout_constraintHorizontal_bias="0.756"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.108" />
