--- a/app/src/main/res/layout/fragment_moderator_users.xml
+++ b/app/src/main/res/layout/fragment_moderator_users.xml
@@ -7,6 +7,7 @@
     tools:context=".Fragments.ModeratorUsersFragment">
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
@@ -28,10 +29,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_total_users"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Total users: 0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="40dp"
         android:layout_weight="1"
         android:background="@drawable/top_shadow_gradient"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,5 +55,6 @@
             android:layout_gravity="center_horizontal" />
 
     </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
