--- a/app/src/main/res/menu/bottom_menu_moderator.xml
+++ b/app/src/main/res/menu/bottom_menu_moderator.xml
@@ -9,4 +9,8 @@
         android:icon="@drawable/ic_baseline_person_24"
         android:title=""/>
 
+    <item android:id="@+id/nav_stats_moderator"
+        android:icon="@drawable/ic_baseline_bar_chart_24"
+        android:title=""/>
+
 </menu>
