--- a/app/src/main/res/layout/fragment_moderator_courses.xml
+++ b/app/src/main/res/layout/fragment_moderator_courses.xml
@@ -13,6 +13,7 @@
         android:scaleType="centerCrop"
         android:src="@color/browser_actions_bg_grey"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
