implemented first two piecharts of moderator stats page

--- a/app/src/main/res/layout/activity_user_stats.xml
+++ b/app/src/main/res/layout/activity_user_stats.xml
@@ -52,6 +52,19 @@
         app:layout_constraintVertical_bias="0.151" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="User's most relevant categories:"
+        android:textColor="@color/black"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.211" />
+
+    <TextView
         android:id="@+id/tv_ratings_posted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,5 +78,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.108" />
+
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/piechart_user_relevant_categories"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="176dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
