--- a/app/src/main/res/layout/activity_moderator_user_details.xml
+++ b/app/src/main/res/layout/activity_moderator_user_details.xml
@@ -158,25 +158,24 @@
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.114"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.02" />
+        app:layout_constraintVertical_bias="0.434" />
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="190dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:background="@drawable/top_shadow_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_posted_courses"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.05">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_courses_user_published"
+            android:id="@+id/rv_courses_user_purchased"
             android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -201,7 +200,7 @@
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="190dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:background="@drawable/top_shadow_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -211,7 +210,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_courses_user_bookmarked"
             android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -221,33 +220,34 @@
     </ScrollView>
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Purchased courses"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.116"
+        app:layout_constraintHorizontal_bias="0.138"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.532" />
+        app:layout_constraintVertical_bias="0.02" />
 
     <ScrollView
         android:id="@+id/scrollView4"
-        android:layout_width="190dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
         android:background="@drawable/top_shadow_gradient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_bookmarked_courses_moderator"
-        app:layout_constraintVertical_bias="0.942">
+        app:layout_constraintTop_toBottomOf="@+id/tv_posted_courses"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_courses_user_purchased"
+            android:id="@+id/rv_courses_user_published"
             android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_height="280dp"
             android:layout_gravity="center_horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
