--- a/app/src/main/res/layout/fragment_moderator_courses.xml
+++ b/app/src/main/res/layout/fragment_moderator_courses.xml
@@ -45,6 +45,7 @@
         android:layout_marginTop="40dp"
         android:layout_weight="1"
         android:background="@drawable/top_shadow_gradient"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_search_courses_moderator">
 
