--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -18,13 +18,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/sort"
+        android:id="@+id/fab_sort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintHorizontal_bias="1"
         app:backgroundTint="@color/browser_actions_bg_grey"
-        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
+        android:src="@drawable/ic_baseline_sort_24"
+        android:layout_margin="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/et_search"
         app:layout_constraintStart_toStartOf="parent"
