--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@drawable/et_bg"
+        android:inputType="number"
         android:hint="XXXX XXXX XXXX XXXX"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -97,6 +98,7 @@
         android:hint="XXX"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
+        android:inputType="number"
         android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
